[package]
name = "queryflux-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-engine-adapters = { workspace = true }
queryflux-cluster-manager = { workspace = true }
queryflux-routing = { workspace = true }
queryflux-auth = { workspace = true }
queryflux-persistence = { workspace = true }
queryflux-translation = { workspace = true }
queryflux-metrics = { workspace = true }
queryflux-fingerprint = { workspace = true }
queryflux-guardrails = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true }
arrow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
arrow-flight = { version = "58.1.0", features = ["flight-sql"] }
arrow-ipc = "58.1.0"
tonic = { version = "0.14.5", features = ["transport"] }
prost = "0.14.3"
dashmap = { workspace = true }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
anyhow = { workspace = true }
