[package]
name = "queryflux-guardrails"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-persistence = { workspace = true }
async-trait = { workspace = true }
polyglot-sql = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
regex = "1.12.3"
